--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -9,7 +9,7 @@ jobs:
       
     - name: Install and Build
       run: |
-          npm ci
+          npm install
           npm run build
 
     - name: vuepress-deploy
