--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -6,6 +6,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    
+    - name: Check Node Version
+      uses: actions/setup-node@v3
+      with:
+        node-version: '14.16.1'
       
     - name: Install and Build
       run: |
