--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "vuepress": "^1.9.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@vue/babel-preset-app": "4.5.18"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build":"vuepress build docs",
