--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -23,6 +23,7 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@releases/v4
       with:
         token: ${{ secrets.VUEPRESS_BLOG }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         branch: main
         repository-name: twt898xu/twt898xu.github.io
         folder: docs/.vuepress/dist
