--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -23,7 +23,7 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@releases/v4
       with:
         token: ${{ secrets.ACCESS_TOKEN }}
-        branch: main
-        repository-name: twt898xu/twt898xu.github.io
+        branch: gh-pages
+        # repository-name: twt898xu/twt898xu.github.io
         folder: docs/.vuepress/dist
         commit-message:  Auto deploy by the Vuepress-deploy
